chore: melhora swagger
adicionado responses e parâmetros às rotas presentes no swagger, também foram feitas melhorias nas respostas das rotas, modificando o status de algumas
