# final-projects/alisson-perim-honostorio/src/controllers/LoanController/hireLoan.ts
@@ -5,7 +5,7 @@ import { ILoan, loanModel } from "../../infra/schemas/loanSchema"
 export const HireLoan = {
   async hireLoan(req: Request, res: Response) {
     const userId = req.user.id
-    const { value, installments, userSalary } = req.body
+    const { value, installments, grossSalaray, netSalary } = req.body
     switch (installments) {
       case 6:
         break
@@ -30,13 +30,19 @@ export const HireLoan = {
           .send({ message: "This user can't hire a loan" })
       }
 
+      if( typeof grossSalaray !== 'number' || typeof netSalary !== 'number'){
+        return res
+          .status(422)
+          .send({message: "Please insert a valid value to the salary"})
+      }
+
       if (findWallet.hasLoan === true) {
         return res
           .status(422)
           .send({ message: `This user already has a loan in his wallet, can't hire another one` })
       }
 
-      const maxLoan = userSalary * 0.3
+      const maxLoan = grossSalaray * 0.3
 
       if (maxLoan < value) {
         return res
